--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -1,1 +1,21 @@
 <!-- En-tête du site --> 
+
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CinéDélices</title>
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-100">
+    <header class="bg-white-900 text-white">
+        <div class="container mx-auto flex justify-between items-center p-4">
+            <!-- Logo -->
+            <div class="logo-div">
+                <img class="logo w-50" src="/images/logo.png" alt="logo-cine-delice">
+            </div>
+        
+                 
