création des fichiers EJs

--- a/app/views/recipes/index.ejs
+++ b/app/views/recipes/index.ejs
@@ -1,1 +1,74 @@
-<!-- Liste des recettes --> 
+<%- include('../partials/header') %>
+<%- include('../partials/nav') %>
+
+<main>
+  <!-- Section détails de la recette -->
+  <section class="">
+    <div class="">
+      <img src="" alt="" class="" />
+      <div class="">
+        <h2 class="">Ratatouille Provençale</h2>
+        <ul class="">
+          <li class="">🍴 Catégorie : Plat principal</li>
+          <li class="">🕒 Temps de préparation : 45 min</li>
+          <li class="">⭐ Difficulté : Facile</li>
+        </ul>
+        <p class="">
+          Découvrez cette recette emblématique inspirée par le film d'animation
+          Pixar "Ratatouille".
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="">
+    <h3 class="">Ingrédients</h3>
+    <ul class="">
+      <li>2 aubergines</li>
+      <li>3 tomates</li>
+      <li>1 poivron rouge</li>
+      <li>Huile d'olive</li>
+      <li>Herbes de Provence</li>
+    </ul>
+  </section>
+
+  <section class="">
+    <h3 class="">Ustensiles</h3>
+    <ul class="">
+      <li>Casserole à fond épais</li>
+      <li>Spatule en silicone</li>
+      <li>Fouet manuel/li></li>
+      <li>Mixeur plongeant</li>
+      <li>Moule à tarte</li>
+    </ul>
+  </section>
+
+  <section class="">
+    <h3>Instructions</h3>
+    <ol class="preparation-steps">
+      <li>Lavez et coupez les légumes en rondelles fines.</li>
+      <li>
+        Dans une poêle, faites revenir l'oignon et l'ail avec un filet d'huile
+        d'olive jusqu'à ce qu'ils soient dorés.
+      </li>
+      <li>
+        Disposez les légumes en couches harmonieuses dans un plat à gratin.
+      </li>
+      <li>Arrosez d'huile d'olive, parsemez de thym, de sel et de poivre.</li>
+      <li>Enfournez à 180°C pendant 45 minutes.</li>
+      <li>Servez chaud et dégustez avec plaisir.</li>
+    </ol>
+  </section>
+
+  <section class="">
+    <h3>Notes et astuces</h3>
+    <p class="">
+      Pour une touche de saveur supplémentaire, ajoutez une pincée de basilic
+      frais au moment de servir.
+    </p>
+  </section>
+</main>
+
+<!-- Footer -->
+
+<%- include('../partials/footer') %>
