--- a/app/views/auth/login.ejs
+++ b/app/views/auth/login.ejs
@@ -1,1 +1,34 @@
 <!-- Page de connexion --> 
+<%- include('../partials/header') %>
+<%- include('../partials/nav') %> 
+   
+<main>
+    <img src="" alt="background" class="">
+
+
+    <section class="">
+        <h1 class="">Content de te revoir!</h1>
+        <p class="">Entrez vos identifiants pour accéder à votre compte</p>
+        
+        <form action="#" method="POST" class="">
+            <div>
+                <input type="email" placeholder="Adresse email" class="">
+            </div>
+            <div>
+                <input type="password" placeholder="Mot de passe" class="">
+                <a href="#" class="">Mot de passe oublié?</a>
+            </div>
+            <div class="">
+                <input type="checkbox" id="" class="">
+                <label for="" class="">Mémoriser pendant 30 jours</label>
+            </div>
+            <button type="submit" class="">Se connecter</button>
+        </form>
+        
+        <p class="">Vous n'avez pas de compte? <a href="#" class="">Inscrivez-vous</a></p>
+    </section>
+
+</main>
+
+
+<%- include('../partials/footer') %>
