--- a/app/views/partials/nav.ejs
+++ b/app/views/partials/nav.ejs
@@ -18,7 +18,7 @@
 </div>
 
 <!-- Menu Mobile -->
-<nav id="menu-burger" class="fixed inset-0 bg-gray-900 bg-opacity-90 text-white hidden flex flex-col items-center justify-center space-y-6">
+<nav id="menu-burger" class="fixed inset-0 bg-gray-900 bg-opacity-90 text-white hidden flex flex-col items-center justify-center space-y-6 z-50">
     <button id="close-menu-burger" class="absolute top-5 right-5 text-2xl">✖</button>
     <a href="./catalogue.html" class="text-lg">Catalogue</a>
     <a href="./boutique.html" class="text-lg">Films & Séries</a>
