--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -17,3 +17,10 @@ h1,h2,h3,h4 {
 
 /* nav */
 
+/* image entête */
+.pic-header{
+    background-image: url('../images/header.jpeg');
+}
+.header-paragraphe{
+    color: #F0815D;
+}
