--- a/app/views/Movie&Tvshow/movie&Tvshow.ejs
+++ b/app/views/Movie&Tvshow/movie&Tvshow.ejs
@@ -1,8 +1,44 @@
 <%- include('../partials/header') %>
-<%- include('../partials/nav') %>
-<main>
+
+<div class="max-w-6xl mx-auto px-4 py-8">
+  
+  <!-- Section Recettes Films en vedette -->
+  <section>
+    <h2 class="text-2xl font-semibold mb-4">Nos Recette de films récentes</h2>
+      
+    <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+      <% recentMovieRecipes.forEach(recipe => { %>
+        <div class="bg-gray-100 p-4 rounded-lg">
+          <img src="/images/<%= recipe.image %>" alt="<%= recipe.titre %>" class="w-full h-32 object-cover rounded-md">
+          <h4 class="mt-2 font-semibold text-gray-800"><%= recipe.titre %></h4>
+          <p class="text-gray-500 text-sm"><%= recipe.date %></p>
+        </div>
+      <% }) %>
+    </div>
+    <button class="mt-4 bg-blue-500 text-white px-4 py-2 rounded-md">Plus</button>
+  </section>
+
+  <!-- Section Recettes Séries en vedette -->
+  <section class="mt-12">
+    <h2 class="text-2xl font-semibold mb-4">Nos Recette de séries récentes</h2>
+       <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+      <% recentTvShowRecipes.forEach(recipe => { %>
+        <div class="bg-gray-100 p-4 rounded-lg">
+          <img src="/images/<%= recipe.image %>" alt="<%= recipe.titre %>" class="w-full h-32 object-cover rounded-md">
+          <h4 class="mt-2 font-semibold text-gray-800"><%= recipe.titre %></h4>
+          <p class="text-gray-500 text-sm"><%= recipe.date %></p>
+        </div>
+      <% }) %>
+    </div>
+    <button class="mt-4 bg-blue-500 text-white px-4 py-2 rounded-md">Plus</button>
+  </section>
+
+</div>
+
+
+<!-- <main> -->
   <!-- Recette films en vedette -->
-  <section class="">
+  <!-- <section class="">
     <h2 class="">Nos Recette films en vedette</h2>
     <article class="">
       <img src="ratatouille.jpg" alt="Ratatouille" class="">
@@ -13,10 +49,10 @@
         <a href="#" class="">Voir la recette</a>
       </div>
     </article>
-  </section>
+  </section> -->
 
   <!-- Recettes récentes (films) -->
-  <section class="">
+  <!-- <section class="">
     <h2 class="">Les récents</h2>
     <div class="">
       <article class="">
@@ -46,10 +82,10 @@
         </div>
       </article>
     </div>
-  </section>
+  </section> -->
 
   <!-- Recette séries en vedette -->
-  <section class="">
+  <!-- <section class="">
     <h2 class="">Nos Recette séries en vedette</h2>
     <article class="">
       <img src=".jpg" alt="" class="">
@@ -60,10 +96,10 @@
         <a href="#" class="">Voir la recette</a>
       </div>
     </article>
-  </section>
+  </section> -->
 
   <!-- Recettes récentes (séries) -->
-  <section class="">
+  <!-- <section class="">
     <h2 class="">Les récents</h2>
     <div class="">
       <article class="">
@@ -85,6 +121,6 @@
       </article>
     </div>
   </section>
-</main>
+</main> -->
 
   <%- include('../partials/footer') %>
