--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -26,10 +26,10 @@
         </div>
         <!-- Liens du footer -->
         <div class="grid grid-cols-1 md:flex md:space-x-6 gap-4 text-center">
-            <p><a href="./catalogue.ejs" class="hover:text-white">Catalogue</a></p>
-            <p><a href="./film&serie.ejs" class="hover:text-white">Film & Série</a></p>
-            <p><a href="./CGU.ejs" class="hover:text-white">CGU</a></p>
-            <p><a href="./mentions-legales.ejs" class="hover:text-white">Mentions Légales</a></p>
+            <p><a href="/catalogue" class="hover:text-white">Catalogue</a></p>
+            <p><a href="/films-series" class="hover:text-white">Film & Série</a></p>
+            <p><a href="/CGU" class="hover:text-white">CGU</a></p>
+            <p><a href="/mentions-legales" class="hover:text-white">Mentions Légales</a></p>
         </div>
 
         <!-- Copyright -->
