add page register + new logo and favicons

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/svg+xml" src href="/images/CineDelice_favicons_32px.svg">
+
     <!-- Ajout de la police moderne -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -20,7 +22,7 @@
                 <div class="flex-shrink-0">
                     <a href="/" class="flex items-center group">
                         <img class="h-16 sm:h-20 w-auto transform transition-transform group-hover:scale-105" 
-                             src="/images/logo.png" 
+                             src="/images/CineDelice_logo_280px.svg" 
                              alt="CinéDélices">
                     </a>
                 </div>
