--- a/app/views/auth/login.ejs
+++ b/app/views/auth/login.ejs
@@ -4,7 +4,7 @@
 <div class=" pic-header-login relative bg-cover bg-center bg-no-repeat min-h-screen flex items-center justify-center"> <!-- Centrer le contenu -->
     <main class="bg-white p-6 rounded-2xl shadow-md w-full max-w-sm">
       <h1 class="text-2xl font-bold text-center mb-4 text-orange-600">Content de te revoir !</h1>
-      <p class="text-center text-orange-400 mb-6">Entrez vos identifiants pour accéder à votre compte</p>
+      <p class="text-center text-black mb-6">Entrez vos identifiants pour accéder à votre compte</p>
 
       <form class="space-y-4">
         <label class="block">
